...
                android:layout_marginBottom="@dimen/text_small_margin"
                android:text="@string/ingredients_label" />

            <androidx.cardview.widget.CardView style="@style/card_view">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredient_recycler_view"
                    style="@style/linear_recycler_view"
                    android:nestedScrollingEnabled="true"
                    tools:listitem="@layout/ingredient_view_holder" />
            </androidx.cardview.widget.CardView>

            <TextView
...
                android:layout_marginBottom="@dimen/text_small_margin"
                android:text="@string/steps_label" />

            <androidx.cardview.widget.CardView style="@style/card_view">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/step_recycler_view"
                    style="@style/linear_recycler_view"
                    android:nestedScrollingEnabled="true"
                    tools:listitem="@layout/step_view_holder" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
...
