<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout style="@style/default_layout">

        <TextView
            android:id="@+id/ingredient_text_view"
            style="@style/wrap_contents"
            android:layout_alignParentStart="true"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/wrap_contents"
            android:layout_toStartOf="@id/measure_text_view"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/measure_text_view"
            style="@style/wrap_contents"
            android:layout_alignParentEnd="true"
            tools:text="@tools:sample/lorem" />
    </RelativeLayout>
</layout>